# AQ

./: CMakeLists.txt  aq.sln  aq.vcxproj
Tools/: AQEngineBasic.cpp  AQEngineBasic.h  AQEngineSimulate.cpp  AQEngineSimulate.h  AQManager.cpp  AQManager.h  CommandHandler.cpp  CommandHandler.h  Link.h  Makefile.win  VerbBuilder.h  aq_tests_batch.cpp  aq_tools.cpp  sql_parser.cpp
aq/: AQFunctor.cpp  AQFunctor.h  AQThread.h  AQThreadRequest.h  ApplyRowVisitor.h  Column2Table.cpp  Column2Table.h  ColumnItem.cpp  ColumnItem.h  ColumnMapper.h  ColumnMapper_Intf.h  ColumnTemporaryWritter.h  DumpVisitor.cpp  DumpVisitor.h  ExprTransform.h  NodeWritter.cpp  NodeWritter.h  Optimizations.cpp  Optimizations.h  ParsException.cpp  ParsException.h  QueryAnalyzer.h  QueryResolver.cpp  QueryResolver.h  Row.cpp  Row.h  RowBinaryWritter.cpp  RowProcess_Intf.h  RowProcesses.h  RowSolver.cpp  RowSolver.h  RowTableWritter.cpp  RowTableWritter.h  RowTemporaryWritter.cpp  RowTemporaryWritter.h  RowVerbProcess.cpp  RowVerbProcess.h  RowWritter.cpp  RowWritter.h  RowWritter_Intf.h  (+13 more)
aq/db_loader/: DatabaseLoader.cpp  DatabaseLoader.h
aq/engine/: AQEngine.cpp  AQEngine.h  AQEngineException.cpp  AQEngineException.h  AQEngine_Intf.h  AQMatrix.cpp  AQMatrix.h  AQRawMatrix.cpp  AQRawMatrix.h  AQTextMatrix.cpp  AQTextMatrix.h
aq/parser/: ID2Str.cpp  ID2Str.h  JeqParser.cpp  JeqParser.h  SQL92_Grm.y  SQL92_Tok.l  SQLParser.cpp  SQLParser.h  lex.yy.cpp  sql92_grm_tab.cpp  sql92_grm_tab.hpp
aq/tests/: AQEngineTests.cpp  AWhereCondition.h  DatabaseGenerator.cpp  DatabaseGenerator.h  DatabaseHelper.cpp  DatabaseHelper.h  FunctionalTests.cpp  Generator.h  MySQLHelper.cpp  MySQLHelper.h  PGSQLHelper.cpp  PGSQLHelper.h  QueryGenerator.cpp  QueryGenerator.h  ReadMe.txt  Report.cpp  Report.h  TestRunner.cpp  TestRunner.h  Util.cpp  Util.h  VerbBuilder.cpp  WhereComparator.cpp  WhereComparator.h  WhereIn.cpp  WhereIn.h  WhereValidator.cpp  WhereValidator.h  stdafx.cpp  stdafx.h  targetver.h
aq/util/: AQLInfixSpiritParser.cpp  AQLParser.h  AQLQuery.cpp  AQLQuery.h  AQLSpiritParser.cpp  Algo.h  Base.cpp  Base.h  BaseDesc.cpp  BaseDesc.h  Column.cpp  Column.h  DBTypes.cpp  DBTypes.h  Database.cpp  Database.h  DateConversion.cpp  DateConversion.h  Exceptions.cpp  Exceptions.h  FileCloser.h  FileMapper.h  GenericFileMapper.cpp  GenericFileMapper.h  LocklessQueue.h  Logger.cpp  Logger.h  MMapFileMapper.h  Object.h  ParallelProcess.h  QueryReader.h  Symbole.h  Table.cpp  Table.h  Timer.cpp  Timer.h  Utilities.cpp  Utilities.h  WIN32FileMapper.cpp  WIN32FileMapper.h
aq/verbs/: AggregateVerbs.cpp  AggregateVerbs.h  ArithmeticVerbs.cpp  ArithmeticVerbs.h  AuxiliaryVerbs.cpp  AuxiliaryVerbs.h  CaseVerb.cpp  CaseVerb.h  ComparisonVerbs.cpp  ComparisonVerbs.h  ConversionVerbs.cpp  ConversionVerbs.h  DateVerbs.cpp  DateVerbs.h  JoinVerbs.cpp  JoinVerbs.h  MainVerbs.cpp  MainVerbs.h  OverVerbs.cpp  OverVerbs.h  ScalarVerbs.cpp  ScalarVerbs.h  Verb.cpp  Verb.h  VerbFactory.cpp  VerbFactory.h  VerbNode.cpp  VerbNode.h  VerbResult.h  VerbVisitor.h
cmake/Modules/: FindMySQLConnectorCPP.cmake  FindPqxx.cmake
tests/: queries.gen
